--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "node": ">=0.8"
   },
   "dependencies" : {
-    "express": ">=3.0.0",
+    "express": "3.x",
     "commander": "*",
+    "jade":"*",
     "colors":"*"
   }
 }
